# camp-be

./: .env.example  .gitignore  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUCCESS.md  Dockerfile.frontend-lambda  FRONTEND_QUICK_START.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
app/: __init__.py  auth.py  config.py  db.py  lambda_handler.py  main.py  maintenance.py  models.py  orm.py  protected_routes.py  routes.py  ticker.py
docs/: CLOUDFRONT_ECS_OPTIMIZATION.md  FRONTEND_DEPLOYMENT_CHECKLIST.md  FRONTEND_LAMBDA_DEPLOYMENT.md  LAMBDA_WEB_ADAPTER_MIGRATION.md  MANUAL_FRONTEND_DEPLOYMENT.md  PRODUCTION_READINESS_ASSESSMENT.md  PRODUCTION_UPGRADE_COMPLETE.md  REDIS_CACHING_GUIDE.md
migrations/: README.md  env.py
scripts/: bootstrap_github_oidc.sh  check_bedrock_chat_smoke.py  check_hosted_auth_smoke.py  check_prohibited_terms.py  check_recommendation_quality_smoke.py  deploy-frontend-complete.ps1  deploy-frontend-manual.ps1  deploy_frontend_lambda.sh  lambda_migrate.py  migrate.ps1  migrate.sh  package_api_lambda.sh  run-bootstrap-dev-jung.sh
tests/: conftest.py  test_api.py  test_api_contract_snapshot.py  test_bedrock_chat_smoke_script.py  test_chat_api.py  test_database_resolution.py  test_deployment_docs.py  test_evidence_gate.py  test_external_adapters.py  test_hosted_auth_smoke_script.py  test_ingestion_idempotency.py  test_ingestion_operations_docs.py  test_ingestion_pipeline.py  test_lambda_maintenance.py  test_me_api.py  test_policy_scanner.py  test_recommendation_api.py  test_recommendation_quality_docs.py  (+8 more)
(+101 files in other folders)
