[project]
name = "stockbrief-api"
version = "0.1.0"
description = "FastAPI backend for StockBrief"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14.0,<2.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "mangum>=0.19.0,<1.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "PyJWT[crypto]>=2.10.0,<3.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "sqlalchemy>=2.0.35,<3.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
]

[project.scripts]
stockbrief-seed-mock = "app.seed.seed_mock_data:main"

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0,<1.0.0",
  "pytest>=8.3.0,<9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["migrations*", "tests*"]
